--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "- This project is an e-commerce website built using a combination of HTML, CSS, and JavaScript. ## Description * Focus: showcase our online srvices and stationaries. ### Technologies:   * HTML: Provides the core structure and content of the website   * CSS: Styles the website's appearance, ensuring user-friendly and virtually appealing experience   * JavaScript: Adds interactive and potential functionalities like search filters, property or contact forms. ## Potential Features * `E-commerce`: Detailed pages for each services with description, high-quality photos, and key features. * `Service Functionality`: Filters narrow down services based on locations, price range, service type. * `Contact Forms`: Allow potential buyers or xustomers to easily contact the the team. * `Responsive Design`: Ensure the website displays and functionality optimally on various devises ## Getting Started 1. Clone or download the project files 2. Open the `index.html` file in a web browser to view the website.",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +21,8 @@
   "homepage": "https://github.com/nimba005/Pheliz-Investment#readme",
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
