--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- This project is an e-commerce website built using a combination of HTML, CSS, and JavaScript. ## Description * Focus: showcase our online srvices and stationaries. ### Technologies:   * HTML: Provides the core structure and content of the website   * CSS: Styles the website's appearance, ensuring user-friendly and virtually appealing experience   * JavaScript: Adds interactive and potential functionalities like search filters, property or contact forms. ## Potential Features * `E-commerce`: Detailed pages for each services with description, high-quality photos, and key features. * `Service Functionality`: Filters narrow down services based on locations, price range, service type. * `Contact Forms`: Allow potential buyers or xustomers to easily contact the the team. * `Responsive Design`: Ensure the website displays and functionality optimally on various devises ## Getting Started 1. Clone or download the project files 2. Open the `index.html` file in a web browser to view the website.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/nimba005/Pheliz-Investment#readme",
   "dependencies": {
+    "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
@@ -29,7 +30,9 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
