--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/nimba005/Pheliz-Investment#readme",
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "express": "^4.19.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
