--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "stream-browserify": "^3.0.0",
     "vm-browserify": "^1.1.2"
